Updated pics and eliminated background colour for heading class

--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
               <figcaption>Swan cream puffs</figcaption>
             </div>
             <div class="img-single">
-              <img src="img/IMG_0735.jpg" alt="Mixed Fruit Tray">
-              <figcaption>Assorted Fruit Tray</figcaption>
+              <img src="img/cheesefruit.jpg" alt="Cheese Tray">
+              <figcaption>Cheese tray</figcaption>
             </div>
             <div class="img-single">
               <img src="img/IMG_0735.jpg" alt="Mixed Fruit Tray">
