added picture to gallery

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
               <figcaption>Cheese tray</figcaption>
             </div>
             <div class="img-single">
-              <img src="img/IMG_0735.jpg" alt="Mixed Fruit Tray">
-              <figcaption>Assorted Fruit Tray</figcaption>
+              <img src="img/IMG_0898.jpg" alt="Salade Niçoise">
+              <figcaption>Salade Niçoise</figcaption>
             </div>
             <div class="img-single">
               <img src="img/IMG_0735.jpg" alt="Mixed Fruit Tray">
