--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 
 
         <div class="home">
-          <h1 class="heading">feeding the Niagara Region since 1987</h1>
+            <div class="main-heading">
+                <h1>Adelina's Catering has been feeding Niagara since 1987.</h1>
+            </div>
           <section>
             <p>Let us compliment your special occasion by allowing us to serve you from our extensive and tempting menu. From hot or cold hors d'oeuvres to a formal sit-down or buffet style dinner - let our experience and professionalism make your day a memorable one, for both you and your guests.</p>
           </section>
