updated pictures and put in page loader

--- a/index.html
+++ b/index.html
@@ -102,14 +102,6 @@
               <img src="img/IMG_0898.jpg" alt="Salade Niçoise">
               <figcaption>Salade Niçoise</figcaption>
             </div>
-            <div class="img-single">
-              <img src="img/IMG_0735.jpg" alt="Mixed Fruit Tray">
-              <figcaption>Assorted Fruit Tray</figcaption>
-            </div>
-            <div class="img-single">
-              <img src="img/IMG_0735.jpg" alt="Mixed Fruit Tray">
-              <figcaption>Assorted Fruit Tray</figcaption>
-            </div>
           </div>
         </div>
 
@@ -133,6 +125,10 @@
           <p>&copy; 1987<script>new Date().getFullYear()>1987&&document.write("-"+new Date().getFullYear());</script>, Adelina's Catering.</p>
           <p>Website designed and developed by <a href="http://www.beattydev.com/" target="_blank">Ben Beatty</a></p>
         </div>
+      
+      <div id="overlay">
+           <div class="spinner"></div>
+      </div>
 
 
 
