changed meta tags

--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
   <head lang="en">
     <meta charset="UTF-8">
-    <title>Adelina's Catering</title>
+    <title>Adelina's Catering | Welland, Ontario | Catering Company</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Italian food catering company located in the Niagara Region.">
+    <meta name="author" content="Adelina Beatty">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Laila" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
