Added favicon and smooth scrolling

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head lang="en">
     <meta charset="UTF-8">
     <title>Adelina's Catering | Welland, Ontario | Catering Company</title>
+    <link rel="shortcut icon" type="image/png" href="img/font-awesome_4-7-0_cutlery_200_0_1c8548_none.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Italian food catering company located in the Niagara Region.">
     <meta name="author" content="Adelina Beatty">
@@ -40,7 +41,7 @@
           
             <section>
             <p>Let us compliment your special occasion by allowing us to serve you from our extensive and tempting menu. From hot or cold hors d'oeuvres to a formal sit-down or buffet style dinner - let our experience and professionalism make your day a memorable one, for both you and your guests.</p>
-          </section>
+            </section>
 
         </div>
 
