--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
               <h2>Menu</h2>
               <h3>Special requests are welcome and we will try our best to accomodate</h3>
               <div class="menus">
-                <a href="menus/horsDoeurves.pdf" target="_blank" class="menu-item"><h4>Hors D'Oeuvres</h4></a>
-                <a href="menus/hotMenu.pdf" target="_blank" class="menu-item">Hot Food</a>
-                <a href="menus/aLaCarte.pdf" target="_blank" class="menu-item">A La Carte</a>
-                <a href="menus/partyTrays.pdf" target="_blank" class="menu-item">Party Trays</a>
-                <a href="menus/dessertMenu.pdf" target="_blank" class="menu-item">Desserts</a>
+                <a href="menus/hors-doeurves.pdf" target="_blank" class="menu-item"><h4>Hors D'Oeuvres</h4></a>
+                <a href="menus/hot-menu.pdf" target="_blank" class="menu-item">Hot Food</a>
+                <a href="menus/a-la-carte.pdf" target="_blank" class="menu-item">A La Carte</a>
+                <a href="menus/party-trays.pdf" target="_blank" class="menu-item">Party Trays</a>
+                <a href="menus/dessert-menu.pdf" target="_blank" class="menu-item">Desserts</a>
               </div>
           </div>
         </div>
