got rid of arrows

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
     <section class="cooking between-sec">
         <h1 class="custom-font padding">cooking</h1>
-        <h2 class="custom-font-secondary between-sec-color">traditional recipes</h2>
+        <h2 class="custom-font-secondary between-sec-color cooking-text">traditional recipes</h2>
     </section>
 
     <section class="contact-us" id="contact">
