added photo and updated menus

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
         <img src="images/sandwiches.jpg">
         <img src="images/IMG_E2474.jpg">
         <img src="images/IMG_E2480.jpg">
+        <img src="images/IMG_6223.JPEG">
     </div>
 
     <section class="cooking between-sec">
