--- a/index.html
+++ b/index.html
@@ -87,6 +87,8 @@
         <img src="images/IMG_E2474.jpg">
         <img src="images/IMG_E2480.jpg">
         <img src="images/IMG_6223.JPEG">
+        <img src="images/easterbread.jpg">
+        <img src="images/charcuterie.jpg">
     </div>
 
     <section class="cooking between-sec">
