--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
 </head>
 
 <body>
+   
+   <section class="Covid_update">
+        <h3 class="Covid_title">We're Open</h3>
+        <p class="Covid_paragraph">April 2020: Adelina's Catering is currently open for take out. <span>Please call in advance to set up a pick up time.</span></p>
+        <p class="Covid_paragraph">(905) 735-9227</p>
+    </section>
+    
 
     <header id="home">
 
@@ -41,6 +48,7 @@
         </div>
 
     </header>
+    
 
     <section class="our-story" id="story">
         <div class="container">
