--- a/index.html
+++ b/index.html
@@ -86,15 +86,15 @@
     </section>
 
     <div class="carousel">
-        <img src="images/fruittray.jpg">
-        <img src="images/fruitpastries.jpg">
-        <img src="images/stawberries-small.jpg">
-        <img src="images/swans.jpg">
-        <img src="images/salad.jpg">
+        <img src="images/choc-cake-two.JPG">
+        <img src="images/pink-cake.JPG">
+        <img src="images/59016622810--C5F442D8-1D96-4A8B-9EAF-A3E93DCC19E3.JPG">
+        <img src="images/pizzelles.JPG">
+        <img src="images/bowties.JPG">
         <img src="images/sandwiches.jpg">
-        <img src="images/IMG_E2474.jpg">
+        <img src="images/choc-cake.JPG">
         <img src="images/IMG_E2480.jpg">
-        <img src="images/IMG_6223.JPEG">
+        <img src="images/59024870540--E8F260AC-A9D6-47E9-AB56-EA6436E9DF10.JPG">
         <img src="images/charcuterie.jpg">
     </div>
 
