--- a/index.html
+++ b/index.html
@@ -98,6 +98,11 @@
         <a href="images/IMG_E2480.jpg" data-lightbox="mygallery"><img src="images/IMG_E2480.jpg"></a>
         <a href="images/59024870540--E8F260AC-A9D6-47E9-AB56-EA6436E9DF10.JPG" data-lightbox="mygallery"><img src="images/59024870540--E8F260AC-A9D6-47E9-AB56-EA6436E9DF10.JPG"></a>
         <a href="images/charcuterie.jpg" data-lightbox="mygallery"><img src="images/charcuterie.jpg"></a>
+        <a href="images/IMG_2916.jpg" data-lightbox="mygallery"><img src="images/IMG_2916.jpg"></a>
+        <a href="images/IMG_2917.jpg" data-lightbox="mygallery"><img src="images/IMG_2917.jpg"></a>
+        <a href="images/IMG_2919.jpg" data-lightbox="mygallery"><img src="images/IMG_2919.jpg"></a>
+        <a href="images/IMG_2920.jpg" data-lightbox="mygallery"><img src="images/IMG_2920.jpg"></a>
+        <a href="images/IMG_2921.jpg" data-lightbox="mygallery"><img src="images/IMG_2921.jpg"></a>
     </div>
 
     <section class="cooking between-sec">
