--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
         </nav>
 
         <div class="main-text">
-            <h1 id="title-main">welcome</h1>
-            <h2 id="title-second">adelina&#39;s catering</h2>
+            <h1 id="title-main">adelina&#39;s catering</h1>
+<!--            <h2 id="title-second">welcome</h2>-->
             <p id="title-para">Always Fresh...Always Delicious<p>
         </div>
 
@@ -92,17 +92,18 @@
         <a href="images/pink-cake.JPG" data-lightbox="mygallery"><img src="images/pink-cake.JPG"></a>
         <a href="images/59016622810--C5F442D8-1D96-4A8B-9EAF-A3E93DCC19E3.JPG" data-lightbox="mygallery"><img src="images/59016622810--C5F442D8-1D96-4A8B-9EAF-A3E93DCC19E3.JPG"></a>
         <a href="images/pizzelles.JPG" data-lightbox="mygallery"><img src="images/pizzelles.JPG"></a>
-        <a href="images/bowties.JPG" data-lightbox="mygallery"><img src="images/bowties.JPG"></a>
-        <a href="images/sandwiches.jpg" data-lightbox="mygallery"><img src="images/sandwiches.jpg"></a>
-        <a href="images/choc-cake.JPG" data-lightbox="mygallery"><img src="images/choc-cake.JPG"></a>
-        <a href="images/IMG_E2480.jpg" data-lightbox="mygallery"><img src="images/IMG_E2480.jpg"></a>
-        <a href="images/59024870540--E8F260AC-A9D6-47E9-AB56-EA6436E9DF10.JPG" data-lightbox="mygallery"><img src="images/59024870540--E8F260AC-A9D6-47E9-AB56-EA6436E9DF10.JPG"></a>
-        <a href="images/charcuterie.jpg" data-lightbox="mygallery"><img src="images/charcuterie.jpg"></a>
-        <a href="images/IMG_2916.jpg" data-lightbox="mygallery"><img src="images/IMG_2916.jpg"></a>
-        <a href="images/IMG_2917.jpg" data-lightbox="mygallery"><img src="images/IMG_2917.jpg"></a>
         <a href="images/IMG_2919.jpg" data-lightbox="mygallery"><img src="images/IMG_2919.jpg"></a>
         <a href="images/IMG_2920.jpg" data-lightbox="mygallery"><img src="images/IMG_2920.jpg"></a>
         <a href="images/IMG_2921.jpg" data-lightbox="mygallery"><img src="images/IMG_2921.jpg"></a>
+        <a href="images/bowties.JPG" data-lightbox="mygallery"><img src="images/bowties.JPG"></a>
+        <a href="images/IMG_E2480.jpg" data-lightbox="mygallery"><img src="images/IMG_E2480.jpg"></a>
+        <a href="images/IMG_2916.jpg" data-lightbox="mygallery"><img src="images/IMG_2916.jpg"></a>
+        <a href="images/IMG_2917.jpg" data-lightbox="mygallery"><img src="images/IMG_2917.jpg"></a>
+        <a href="images/choc-cake.JPG" data-lightbox="mygallery"><img src="images/choc-cake.JPG"></a>
+        <a href="images/sandwiches.jpg" data-lightbox="mygallery"><img src="images/sandwiches.jpg"></a>
+        <a href="images/59024870540--E8F260AC-A9D6-47E9-AB56-EA6436E9DF10.JPG" data-lightbox="mygallery"><img src="images/59024870540--E8F260AC-A9D6-47E9-AB56-EA6436E9DF10.JPG"></a>
+        <a href="images/charcuterie.jpg" data-lightbox="mygallery"><img src="images/charcuterie.jpg"></a>
+        <a href="images/IMG_2936.jpg" data-lightbox="mygallery"><img src="images/IMG_2936.jpg"></a>
     </div>
 
     <section class="cooking between-sec">
