Added new photos

--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
     </section>
 
     <div class="carousel gallery">
-        <a href="images/choc-cake-two.JPG" data-lightbox="mygallery"><img src="images/choc-cake-two.JPG"></a>
-        <a href="images/pink-cake.JPG" data-lightbox="mygallery"><img src="images/pink-cake.JPG"></a>
-        <a href="images/59016622810--C5F442D8-1D96-4A8B-9EAF-A3E93DCC19E3.JPG" data-lightbox="mygallery"><img src="images/59016622810--C5F442D8-1D96-4A8B-9EAF-A3E93DCC19E3.JPG"></a>
+        <a href="images/Nov_new_01.JPG" data-lightbox="mygallery"><img src="images/Nov_new_01.JPG"></a>
+        <a href="images/Nov_new_04.JPG" data-lightbox="mygallery"><img src="images/Nov_new_04.JPG"></a>
+        <a href="images/Nov_new_05.JPG" data-lightbox="mygallery"><img src="images/Nov_new_05.JPG"></a>
         <a href="images/pizzelles.JPG" data-lightbox="mygallery"><img src="images/pizzelles.JPG"></a>
         <a href="images/IMG_2919.jpg" data-lightbox="mygallery"><img src="images/IMG_2919.jpg"></a>
         <a href="images/IMG_2920.jpg" data-lightbox="mygallery"><img src="images/IMG_2920.jpg"></a>
@@ -104,6 +104,8 @@
         <a href="images/59024870540--E8F260AC-A9D6-47E9-AB56-EA6436E9DF10.JPG" data-lightbox="mygallery"><img src="images/59024870540--E8F260AC-A9D6-47E9-AB56-EA6436E9DF10.JPG"></a>
         <a href="images/charcuterie.jpg" data-lightbox="mygallery"><img src="images/charcuterie.jpg"></a>
         <a href="images/IMG_2936.jpg" data-lightbox="mygallery"><img src="images/IMG_2936.jpg"></a>
+        <a href="images/Nov_new_03.JPG" data-lightbox="mygallery"><img src="images/Nov_new_03.JPG"></a>
+        <a href="images/Nov_new_02.JPG" data-lightbox="mygallery"><img src="images/Nov_new_02.JPG"></a>
     </div>
 
     <section class="cooking between-sec">
