--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <a href="images/IMG_2920.jpg" data-lightbox="mygallery"><img src="images/IMG_2920.jpg"></a>
         <a href="images/IMG_2921.jpg" data-lightbox="mygallery"><img src="images/IMG_2921.jpg"></a>
         <a href="images/bowties.JPG" data-lightbox="mygallery"><img src="images/bowties.JPG"></a>
-        <a href="images/IMG_E2480.jpg" data-lightbox="mygallery"><img src="images/IMG_E2480.jpg"></a>
+        <a href="images/59016622810--C5F442D8-1D96-4A8B-9EAF-A3E93DCC19E3.JPG" data-lightbox="mygallery"><img src="images/59016622810--C5F442D8-1D96-4A8B-9EAF-A3E93DCC19E3.JPG"></a>
         <a href="images/IMG_2916.jpg" data-lightbox="mygallery"><img src="images/IMG_2916.jpg"></a>
         <a href="images/IMG_2917.jpg" data-lightbox="mygallery"><img src="images/IMG_2917.jpg"></a>
         <a href="images/choc-cake.JPG" data-lightbox="mygallery"><img src="images/choc-cake.JPG"></a>
