--- a/index.html
+++ b/index.html
@@ -97,7 +97,6 @@
         <a href="images/IMG_2921.jpg" data-lightbox="mygallery"><img src="images/IMG_2921.jpg"></a>
         <a href="images/bowties.JPG" data-lightbox="mygallery"><img src="images/bowties.JPG"></a>
         <a href="images/59016622810--C5F442D8-1D96-4A8B-9EAF-A3E93DCC19E3.JPG" data-lightbox="mygallery"><img src="images/59016622810--C5F442D8-1D96-4A8B-9EAF-A3E93DCC19E3.JPG"></a>
-        <a href="images/IMG_2916.jpg" data-lightbox="mygallery"><img src="images/IMG_2916.jpg"></a>
         <a href="images/IMG_2917.jpg" data-lightbox="mygallery"><img src="images/IMG_2917.jpg"></a>
         <a href="images/choc-cake.JPG" data-lightbox="mygallery"><img src="images/choc-cake.JPG"></a>
         <a href="images/sandwiches.jpg" data-lightbox="mygallery"><img src="images/sandwiches.jpg"></a>
@@ -135,7 +134,7 @@
                 new Date().getFullYear() > 1987 && document.write("-" + new Date().getFullYear());
 
             </script>, Adelina's Catering.</p>
-        <p>Website designed and developed by <a class="ben-link" href="http://www.beattydev.com/" target="_blank">Ben Beatty</a></p>
+        <p>Website designed and developed by Ben Beatty</p>
     </footer>
 
     <div id="page-loader">
