--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <a href="images/Nov_new_04.JPG" data-lightbox="mygallery"><img src="images/Nov_new_04.JPG"></a>
         <a href="images/Nov_new_05.JPG" data-lightbox="mygallery"><img src="images/Nov_new_05.JPG"></a>
         <a href="images/pizzelles.JPG" data-lightbox="mygallery"><img src="images/pizzelles.JPG"></a>
-        <a href="images/IMG_2919.jpg" data-lightbox="mygallery"><img src="images/IMG_2919.jpg"></a>
+        <a href="images/cupcakes_2023.jpg" data-lightbox="mygallery"><img src="images/cupcakes_2023.jpg"></a>
         <a href="images/IMG_2920.jpg" data-lightbox="mygallery"><img src="images/IMG_2920.jpg"></a>
         <a href="images/IMG_2921.jpg" data-lightbox="mygallery"><img src="images/IMG_2921.jpg"></a>
         <a href="images/bowties.JPG" data-lightbox="mygallery"><img src="images/bowties.JPG"></a>
