--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </section>
 
     <div class="carousel gallery">
-        <a href="images/skorcake_2023.JPG" data-lightbox="mygallery"><img src="images/skorcake_2023.JPG"></a>
+        <a href="images/skorcake_2023.jpg" data-lightbox="mygallery"><img src="images/skorcake_2023.jpg"></a>
         <a href="images/Nov_new_04.JPG" data-lightbox="mygallery"><img src="images/Nov_new_04.JPG"></a>
         <a href="images/Nov_new_05.JPG" data-lightbox="mygallery"><img src="images/Nov_new_05.JPG"></a>
         <a href="images/pizzelles.JPG" data-lightbox="mygallery"><img src="images/pizzelles.JPG"></a>
@@ -100,16 +100,16 @@
         <a href="images/kifili_2023.jpg" data-lightbox="mygallery"><img src="images/kifili_2023.jpg"></a>
         <a href="images/choc-cake.JPG" data-lightbox="mygallery"><img src="images/choc-cake.JPG"></a>
         <a href="images/sandwiches.jpg" data-lightbox="mygallery"><img src="images/sandwiches.jpg"></a>
-        <a href="images/sandwiches_2023.JPG" data-lightbox="mygallery"><img src="images/sandwiches_2023.JPG"></a>
+        <a href="images/sandwiches_2023.jpg" data-lightbox="mygallery"><img src="images/sandwiches_2023.jpg"></a>
         <a href="images/charcuterie_2023.jpg" data-lightbox="mygallery"><img src="images/charcuterie_2023.jpg"></a>
         <a href="images/IMG_2936.jpg" data-lightbox="mygallery"><img src="images/IMG_2936.jpg"></a>
         <a href="images/Nov_new_03.JPG" data-lightbox="mygallery"><img src="images/Nov_new_03.JPG"></a>
         <a href="images/Nov_new_02.JPG" data-lightbox="mygallery"><img src="images/Nov_new_02.JPG"></a>
-        <a href="images/frenchhorns_2023.JPG" data-lightbox="mygallery"><img src="images/frenchhorns_2023.JPG"></a>
-        <a href="images/biscotti_2023.JPG" data-lightbox="mygallery"><img src="images/biscotti_2023.JPG"></a>
-        <a href="images/eastercookies_2023.JPG" data-lightbox="mygallery"><img src="images/eastercookies_2023.JPG"></a>
-        <a href="images/sunflowercookies_2023.JPG" data-lightbox="mygallery"><img src="images/sunflowercookies_2023.JPG"></a>
-        <a href="images/choccake_2023.JPG" data-lightbox="mygallery"><img src="images/choccake_2023.JPG"></a>
+        <a href="images/frenchhorns_2023.jpg" data-lightbox="mygallery"><img src="images/frenchhorns_2023.jpg"></a>
+        <a href="images/biscotti_2023.jpg" data-lightbox="mygallery"><img src="images/biscotti_2023.jpg"></a>
+        <a href="images/eastercookies_2023.jpg" data-lightbox="mygallery"><img src="images/eastercookies_2023.jpg"></a>
+        <a href="images/sunflowercookies_2023.jpg" data-lightbox="mygallery"><img src="images/sunflowercookies_2023.jpg"></a>
+        <a href="images/choccake_2023.jpg" data-lightbox="mygallery"><img src="images/choccake_2023.jpg"></a>
     </div>
 
     <section class="cooking between-sec">
