--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <a href="images/biscotti_2023.jpg" data-lightbox="mygallery"><img src="images/biscotti_2023.jpg"></a>
         <a href="images/eastercookies_2023.jpg" data-lightbox="mygallery"><img src="images/eastercookies_2023.jpg"></a>
         <a href="images/sunflowercookies_2023.jpg" data-lightbox="mygallery"><img src="images/sunflowercookies_2023.jpg"></a>
-        <a href="images/choccake_2023.jpg" data-lightbox="mygallery"><img src="images/choccake_2023.jpg"></a>
+<!--         <a href="images/choccake_2023.jpg" data-lightbox="mygallery"><img src="images/choccake_2023.jpg"></a> -->
     </div>
 
     <section class="cooking between-sec">
