--- a/index.html
+++ b/index.html
@@ -17,13 +17,10 @@
 
 <body>
 
-    <!--
+  
    <section class="Covid_update">
-        <h3 class="Covid_title">We're Open</h3>
-        <p class="Covid_paragraph">April 2020: Adelina's Catering is currently open for take out. <span>Please call in advance to set up a pick up time.</span></p>
-        <p class="Covid_paragraph">(905) 735-9227</p>
+        <p class="Covid_paragraph">Make your holidays delicious — last pickup day is Sunday, December 21st!</p>
     </section>
--->
 
 
     <header id="home">
